# BSSForecast

./: .gitignore  Cod.py  Sales.py  UAH_Category_PM.csv  UAH_Search_all.csv  UAH_customer_order_data.csv  UAH_customer_order_data2.csv  clt.py  cluster.py  forecast.py  namech.py  profit_env.yml  pt.py  pyproject.toml  run_analysis.py  sf.py  transaction.py
bss/: config.py  data_loader.py  utils.py
bss/analysis/: customers.py  products.py  sales.py  search.py
bss/ml/: basket.py  churn.py  forecasting.py  segmentation.py
bss/reporting/: report_generator.py
config/: settings.yaml
data/raw/: UAH_Product_Data.csv  UAH_Search.csv
legacy/: Customer.py  clt.py  pt.py  whatever.py
